[package]
name = "tech_analysis"
version = "0.1.0"
edition = "2021"
description = "technical analysis for crypto and stock"
license = "MIT"
homepage = "https://github.com/uyplayer/tech_analysis"
repository = "https://github.com/uyplayer/tech_analysis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "tech_analysis"
path = "src/lib.rs"

[[bin]]
name = "tech_analysis"
path = "src/main.rs"

[dependencies]
polars = { version = "^0.32.1", features = ["lazy","describe"] }

